@@ -143,6 +143,8 @@
 #define IDS_ERR_PROPNOMULTILINE         232
 #define IDS_MENUREVISIONGRAPH           233
 #define IDS_MENUDESCREVISIONGRAPH       234
+#define IDS_MENUCLEANUPREFRESH          235
+#define IDS_MENUDESCCLEANUPREFRESH      236
 #define IDS_MENUUNIGNORE                237
 #define IDS_MENUDESCUNIGNORE            238
 #define IDS_MENU_LOCK                   240
